tests/fixtures/errors/nonexhaustive_match.z
# E0036: a variant match that omits arms and has no else clause.
Color: variant {
    red: null
    green: null
    blue: null
}

main: function is {
    c: Color.red
    match (
        c
    ) case red then {
        print "r"
    }
}
